clean up code and center second sell section and fix div overlap

--- a/CSS/TDKstyle.scss
+++ b/CSS/TDKstyle.scss
@@ -21,16 +21,11 @@ body {
     padding-top: 1%;
 }
 
-section {
-    height: 100vh;
-} 
-
-main {
-    // border: 2px solid pink;
-    height: auto;
-    width: auto;
-    // overflow: hidden;
-}
+// main {
+//     display: flex;
+//     justify-content: center;
+    
+// }
 
 footer {
     // border: 2px solid mediumvioletred;
@@ -42,6 +37,7 @@ footer {
 .hero {
     position: relative;
     border: transparent;
+    width: 100%;
     min-height: 100vh;
     margin-bottom: 50px;
     color: black;
@@ -107,37 +103,37 @@ footer {
     flex-flow: row wrap;
     justify-content: center;
     width: auto;
-    .heroMiniFeat {
-        box-sizing: border-box;
-        border-top: 1px solid black;
-        min-height: auto;
-        width: auto;
-        position: relative;
-        margin: 0 20px 20px 20px;
-        display:flex;
-        img {
-            object-fit: cover;
-            padding: 20px 0 0 0;
-            // flex: 1 0 50px;
-            width: 70px;
-            height: 70px;
-            // box-sizing: border-box;
-        }
-        .miniHeading {
+} 
+        .heroMiniFeat {
             box-sizing: border-box;
+            border-top: 1px solid black;
+            min-height: auto;
+            width: auto;
             position: relative;
-            // top: 20%;
-            height:100%;
-            width: 200px;
-            padding: 20px 0 0 20px;
-            font-family: $mainfont;
-            font-size: .75rem;
-            p {
-                padding-top: 15px;
+            margin: 0 20px 20px 20px;
+            display:flex;
+            img {
+                object-fit: cover;
+                padding: 20px 0 0 0;
+                // flex: 1 0 50px;
+                width: 70px;
+                height: 70px;
+                // box-sizing: border-box;
+            }
+            .miniHeading {
+                box-sizing: border-box;
+                position: relative;
+                // top: 20%;
+                height:100%;
+                width: 200px;
+                padding: 20px 0 0 20px;
+                font-family: $mainfont;
+                font-size: .75rem;
+                p {
+                    padding-top: 15px;
+                }
             }
         }
-    }
-} 
 
 // .cutBack {
 //     background-image: url('../Media/alita_battle_angel.jpg');
@@ -231,24 +227,13 @@ nav {
     margin-top: 90px;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-start;
+    justify-content: center;
     position: relative;
     width: 100%;
     overflow: clip;
     box-sizing: border-box;
 }
 
-.feature {
-    img {
-        height:250px;
-        width: 300px;
-        margin: 10px;
-        object-fit: cover;
-        flex-basis: 1 0 300px;
-        position: relative;
-        margin: 20px;
-    }
-}
 
 
 .sticky {
@@ -320,6 +305,7 @@ nav {
                 }
             }
         }
+
 .hero {
     .heroMain {
         .mainHeading {
@@ -365,15 +351,6 @@ nav {
     .featureHeading {
         left:0;
         top:0;
-    }
-
-    .feature:nth-child(2) {
-        left: 0;
-    }
-    
-    .feature:nth-child(2) .featureHeading {    
-        left: 0;
-        z-index: 1000;
     }
     
 }
